--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                                 <button type="submit" class="btn-submit">
-                                    <span class="text">Search</span>
+                                    <span class="text">Tìm kiếm</span>
                                     <span class="gokko-icon icon-search" aria-hidden="true"></span>
                                 </button>
                             </form><!-- block search -->
