--- a/16_Shop_MultiProduct/theme/style.red.css
+++ b/16_Shop_MultiProduct/theme/style.red.css
@@ -22,9 +22,8 @@ a:hover, a:focus, .sticky-post, blockquote::before, .post-item .post-content a, 
 .product-item.style-2 .add-to-cart > a {
      border: 2px solid #d11222; 
 }
-body{
-	font-family: tahoma;
-	
+body {
+    font-family: Arial;
 }
 .vc_custom_1536911229630 {
     padding-bottom: 200px !important;
