--- a/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
@@ -39,18 +39,18 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-3 control-label"> Thành phố/ Tỉnh</label>
+                <label class="col-md-3 control-label">Thành phố/Tỉnh</label>
                 <div class="col-md-5">
                     <select class="input form-control" id="country" name="province">
-                        <option value="0">Tỉnh/ thành phố</option>
+                        <option value="0">Thành phố/Tỉnh</option>
                     </select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-3 control-label"> Quận /Huyện</label>
+                <label class="col-md-3 control-label">Quận/Huyện</label>
                 <div class="col-md-5">
                     <select class="input form-control" id="prov" name="district">
-                        <option value="0">Quận huyện</option>
+                        <option value="0">Quận/Huyện</option>
                     </select>
                 </div>
 
@@ -137,6 +137,9 @@
         .col-md-5 input[type="text"], input[type="email"], input[type="password"], input[type="tel"], input[type="search"], input[type="url"] {
             height: 35px;
         }
+        .breadcrumb {
+                margin: 22px 0 15px;
+            }
     </style>
 }
 
