--- a/16_Shop_MultiProduct/Views/Warranty/Info.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Info.cshtml
@@ -21,7 +21,7 @@
             @if (!string.IsNullOrEmpty(id))
             {
                 <div class="row" style="margin-bottom:30px;">
-                    <div class="col-md-12">Đăng ký thành công cho sản phẩm <strong>@item.Id</strong></div>
+                    <div class="col-md-12">Đăng ký thành công cho sản phẩm <strong>@item.PrName</strong></div>
                     <div class="col-md-12">Mã số phiếu bảo hành của bạn là: <strong>JK-PBH-@Model.Id</strong></div>
                     <div class="col-md-12">Vui lòng liên hệ trong tâm bảo hành của Jaki trên toàn quốc để được hỗ trợ khi cần thiết</div>
 
