--- a/16_Shop_MultiProduct/Views/Warranty/Check.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Check.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.title = " Jaki - Đăng ký bảo hành điện tử";
+    ViewBag.title = " Jaki - Kiểm tra bảo hành điện tử";
     
 }
 <div class="container">
@@ -44,9 +44,9 @@
     </div>
 </div>
 @section health{
-    <meta property="og:description" content="Đăng ký bảo hành điện tử thương hiệu Jaki">
+    <meta property="og:description" content="Kiểm tra bảo hành điện tử thương hiệu Jaki">
     <meta property="og:title" content="Jaki - Kiếm tra thông tin bảo hành điện tử">
-    <meta name="description" content="Đăng ký bảo hành điện tử thương hiệu Jaki">
+    <meta name="description" content="Kiểm tra bảo hành điện tử thương hiệu Jaki">
     <meta name="keywords" content="bảo hành, Jaki">
 }
 @section scripts{
