--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                     <div class="form-search-mobile">
                         <a href="#"><i class="gokko-icon icon-search"></i></a>
                         <div class="block-search">
-                            <form role="search" method="get" action="@currentUrl" class="form-search block-search ovic-live-search-form" role="search">
+                            <form role="search" method="get" action="/search" class="form-search block-search ovic-live-search-form" role="search">
                                 <a href="#" class="close-block-search"><span class="fa fa-times"></span></a>
                                 <div class="form-content search-box results-search is-woocommerce">
                                     <div class="inner">
