--- a/16_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -260,7 +260,7 @@
                                         {
                                             <div class="product-item style-4" style="width:100%;display:inline-block;">
                                                 <div class="countdown-container">
-                                                    <div class="gokko-countdown" data-datetime="@Anpero.StringHelpper.ConvertDateTime(item.SaleEndTime.ToString()).ToString()"
+                                                    <div class="gokko-countdown" data-datetime="@item.SaleEndTime.ToString()"
                                                          data-txt_day="Ngày"
                                                          data-txt_hour="Giờ"
                                                          data-txt_min="Phút"
